singularity/jobs/error3941484.err
  File "train.py", line 106
    segment_start,segment_end)
    ^
SyntaxError: positional argument follows keyword argument
